--- a/cabinet.html
+++ b/cabinet.html
@@ -210,9 +210,9 @@
     }
 
     .members-title{
-      font-size:.86рем;
+      font-size:.86rem;
       text-transform:uppercase;
-      letter-spacing:.16em;
+      letter-spacing:.16rem;
       color:#9ca3af;
       margin-bottom:6px;
     }
