--- a/admin.html
+++ b/admin.html
@@ -10,6 +10,20 @@
   <style>
     body{ background: radial-gradient(circle at top,#111827 0,#020617 55%); }
 
+    /* FIX: щоб "SC" не обрізало */
+    .header .logo__mark{
+      display:inline-flex !important;
+      align-items:center !important;
+      justify-content:center !important;
+      width:38px !important;
+      height:38px !important;
+      line-height:1 !important;
+      overflow:visible !important;
+      padding:0 !important;
+    }
+    .header .logo{ gap:10px; }
+    .header .container.header__row{ align-items:center; }
+
     .admin-wrap{ max-width:980px; margin:0 auto; padding:22px 0 70px; }
 
     .admin-top{
@@ -32,10 +46,9 @@
     .stack{ display:flex; flex-direction:column; gap:10px; }
     .stack .btn{ width:100%; justify-content:center; padding:12px 14px; border-radius:14px; }
 
-    .row{ display:flex; gap:10px; flex-wrap:wrap; margin-top:10px; }
     .hr{ height:1px; background:rgba(148,163,184,.18); margin:12px 0; border-radius:99px; }
 
-    /* login like auth */
+    /* Login like auth */
     .login-card{
       max-width:560px;
       margin:0 auto;
@@ -45,9 +58,7 @@
       border:1px solid #262636;
       box-shadow:0 18px 40px rgba(0,0,0,.6);
     }
-    .login-tabs{
-      display:flex; gap:10px; margin-bottom:12px;
-    }
+    .login-tabs{ display:flex; gap:10px; margin-bottom:12px; }
     .pill{
       padding:10px 14px;border-radius:999px;
       border:1px solid rgba(148,163,184,.25);
@@ -58,14 +69,9 @@
       background:linear-gradient(135deg,var(--accent),var(--accent-2));
       color:#000;border-color:transparent;
     }
-    .login-title{
-      font-size:1.6rem; font-weight:900; letter-spacing:.04em;
-      margin:6px 0 6px;
-    }
+    .login-title{ font-size:1.6rem; font-weight:900; letter-spacing:.04em; margin:6px 0 6px; }
     .login-sub{ color:#9ca3af; margin-bottom:14px; }
-    .field{
-      display:grid; gap:6px; margin-bottom:12px;
-    }
+    .field{ display:grid; gap:6px; margin-bottom:12px; }
     .field label{ font-size:.9rem; color:#cbd5e1; }
     .field input{
       width:100%;
@@ -121,6 +127,7 @@
       justify-content:space-between;
       gap:8px;
     }
+
     .badge{
       font-size:.72rem;
       padding:5px 10px;
@@ -129,6 +136,18 @@
       background:rgba(2,6,23,.45);
       color:#e5e7eb;
       white-space:nowrap;
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+    }
+    .dot{
+      width:10px;height:10px;border-radius:999px;
+      background:#ef4444; /* red by default */
+      box-shadow:0 0 12px rgba(239,68,68,.35);
+    }
+    .dot--green{
+      background:#22c55e;
+      box-shadow:0 0 12px rgba(34,197,94,.35);
     }
     .badge--final{
       background:linear-gradient(135deg,#f6c34c,#d6a23a,#7a0f2b);
@@ -140,11 +159,7 @@
     .ok{ color:#22c55e; }
     .err{ color:#ef4444; }
 
-    .note{
-      font-size:.82rem;
-      color:#9ca3af;
-      line-height:1.35;
-    }
+    .note{ font-size:.82rem; color:#9ca3af; line-height:1.35; }
     .note b{ color:#e5e7eb; }
   </style>
 </head>
@@ -221,11 +236,6 @@
       <!-- CREATE -->
       <div id="modCreate" class="admin-card hidden">
         <div style="font-weight:900; margin-bottom:8px;">Створити змагання</div>
-
-        <div class="note">
-          Ти задаєш <b>Старт</b> і <b>Фініш</b>. Реєстрація автоматично:
-          <b>відкриття = Start − 28 днів</b>, <b>закриття = Start − 14 днів</b> (все о <b>12:00 Київ</b>).
-        </div>
 
         <div class="mini-form">
           <select id="inpType">
@@ -317,9 +327,7 @@
     if(name==="edit") show(modEdit);
   }
 
-  // ---------- safe helpers ----------
   function esc(s){ return String(s||"").replace(/[&<>"']/g, m=>({ "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;" }[m])); }
-
   function normDate(v){
     const s = (v||"").trim();
     if(!s) return "";
@@ -327,7 +335,6 @@
     return s;
   }
 
-  // compute reg window from start date (12:00 fixed)
   function addDays(dateStr, days){
     const [y,m,d] = dateStr.split("-").map(Number);
     const dt = new Date(Date.UTC(y, m-1, d, 12, 0, 0));
@@ -337,17 +344,33 @@
     const dd = String(dt.getUTCDate()).padStart(2,"0");
     return `${yy}-${mm}-${dd}`;
   }
-
   function regOpenFromStart(startDate){ return startDate ? addDays(startDate, -28) : ""; }
   function regCloseFromStart(startDate){ return startDate ? addDays(startDate, -14) : ""; }
 
+  function isRegistrationOpenNow(startDate){
+    const s = normDate(startDate);
+    if(!s) return false;
+    const open = regOpenFromStart(s);
+    const close = regCloseFromStart(s);
+
+    const now = new Date();
+    const nowUTC = Date.UTC(now.getUTCFullYear(), now.getUTCMonth(), now.getUTCDate(), 12,0,0);
+
+    const [oy,om,od] = open.split("-").map(Number);
+    const [cy,cm,cd] = close.split("-").map(Number);
+    const openUTC = Date.UTC(oy, om-1, od, 12,0,0);
+    const closeUTC= Date.UTC(cy, cm-1, cd, 12,0,0);
+
+    return nowUTC >= openUTC && nowUTC <= closeUTC;
+  }
+
   function renderEventBlock(key, title, isFinal=false){
     const badge = isFinal
-      ? `<span class="badge badge--final">ФІНАЛ</span>`
-      : `<span class="badge">${esc(key)}</span>`;
+      ? `<span class="badge badge--final"><span class="dot dot--green" style="opacity:.0"></span>ФІНАЛ</span>`
+      : `<span class="badge"><span class="dot"></span>${esc(key)}</span>`;
 
     return `
-      <div class="win-card" data-ev="${esc(key)}">
+      <div class="win-card" data-ev="${esc(key)}" data-final="${isFinal ? "1" : "0"}">
         <div class="win-title">
           <span>${esc(title)}</span>
           ${badge}
@@ -366,9 +389,7 @@
 
         <div class="hr"></div>
 
-        <div class="note" data-preview>
-          Реєстрація: — (авто)
-        </div>
+        <div class="note" data-preview>Реєстрація: —</div>
       </div>
     `;
   }
@@ -377,30 +398,38 @@
     const blocks = [];
     const count = (type==="season") ? Number(stagesCount||3) : 1;
 
-    for(let i=1;i<=count;i++){
-      blocks.push(renderEventBlock(`stage-${i}`, `Етап ${i}`, false));
-    }
-    if(type==="season" && hasFinal==="yes"){
-      blocks.push(renderEventBlock("final", "Фінал", true));
-    }
-    container.innerHTML = blocks.join("");
+    for(let i=1;i<=count;i++) blocks.push(renderEventBlock(`stage-${i}`, `Етап ${i}`, false));
+    if(type==="season" && hasFinal==="yes") blocks.push(renderEventBlock("final", "Фінал", true));
 
-    // hook preview update
+    container.innerHTML = blocks.join("");
+    hookPreview(container);
+  }
+
+  function hookPreview(container){
     container.querySelectorAll("[data-ev]").forEach(card=>{
       const start = card.querySelector("[data-start]");
       const prev  = card.querySelector("[data-preview]");
-      const updatePreview = ()=>{
+      const dot   = card.querySelector(".dot");
+
+      const update = ()=>{
         const s = normDate(start.value || "");
         if(!s){
-          prev.textContent = "Реєстрація: — (авто)";
+          if(prev) prev.textContent = "Реєстрація: —";
+          if(dot) dot.classList.remove("dot--green");
           return;
         }
         const open = regOpenFromStart(s);
         const close= regCloseFromStart(s);
-        prev.innerHTML = `Реєстрація: <b>${open}</b> → <b>${close}</b> (12:00 Київ)`;
+        if(prev) prev.innerHTML = `Реєстрація: <b>${open}</b> → <b>${close}</b> (12:00 Київ)`;
+        if(dot){
+          const ok = isRegistrationOpenNow(s);
+          dot.classList.toggle("dot--green", ok);
+        }
       };
-      start.addEventListener("change", updatePreview);
-      updatePreview();
+
+      start.addEventListener("change", update);
+      start.addEventListener("input", update);
+      update();
     });
   }
 
@@ -410,9 +439,13 @@
       const key = card.getAttribute("data-ev");
       const startDate  = normDate(card.querySelector("[data-start]")?.value || "");
       const finishDate = normDate(card.querySelector("[data-finish]")?.value || "");
-      const openDate   = startDate ? regOpenFromStart(startDate) : "";
-      const closeDate  = startDate ? regCloseFromStart(startDate) : "";
-      res.push({ key, startDate, finishDate, regOpenDate: openDate, regCloseDate: closeDate });
+      res.push({
+        key,
+        startDate,
+        finishDate,
+        regOpenDate: startDate ? regOpenFromStart(startDate) : "",
+        regCloseDate: startDate ? regCloseFromStart(startDate) : ""
+      });
     });
     return res;
   }
@@ -426,15 +459,8 @@
       const iF = card.querySelector("[data-finish]");
       if(iS) iS.value = e.startDate || "";
       if(iF) iF.value = e.finishDate || "";
-
-      // refresh preview
-      const prev  = card.querySelector("[data-preview]");
-      const s = normDate(iS?.value || "");
-      if(prev){
-        if(!s) prev.textContent = "Реєстрація: — (авто)";
-        else prev.innerHTML = `Реєстрація: <b>${regOpenFromStart(s)}</b> → <b>${regCloseFromStart(s)}</b> (12:00 Київ)`;
-      }
     });
+    hookPreview(container);
   }
 
   async function waitForFirebase(){
@@ -442,27 +468,20 @@
       if(window.scAuth && window.scDb && window.firebase) return;
       await new Promise(r=>setTimeout(r,100));
     }
-    throw new Error("Firebase init не підняв scAuth/scDb. Перевір assets/js/firebase-init.js і підключення SDK.");
+    throw new Error("Firebase init не підняв scAuth/scDb (assets/js/firebase-init.js).");
   }
 
-  // ---------- Draft autosave (anti-zlit) ----------
-  const DRAFT_KEY = "sc_admin_create_draft_v3";
+  // --- anti-zlit draft ---
+  const DRAFT_KEY = "sc_admin_create_draft_v4";
+  function getDraft(){ try{ return JSON.parse(localStorage.getItem(DRAFT_KEY) || "null"); }catch{ return null; } }
+  function setDraft(data){ try{ localStorage.setItem(DRAFT_KEY, JSON.stringify(data)); }catch{} }
+  function clearDraft(){ try{ localStorage.removeItem(DRAFT_KEY); }catch{} }
 
-  function getDraft(){
-    try{ return JSON.parse(localStorage.getItem(DRAFT_KEY) || "null"); }catch{ return null; }
-  }
-  function setDraft(data){
-    try{ localStorage.setItem(DRAFT_KEY, JSON.stringify(data)); }catch{}
-  }
-  function clearDraft(){
-    try{ localStorage.removeItem(DRAFT_KEY); }catch{}
-  }
   function collectCreateState(){
     const wrap = $("eventWindowsWrap");
     return {
       type: $("inpType")?.value || "season",
       year: ($("inpYear")?.value || "").trim(),
-      brand: "STOLAR CARP",
       name: ($("inpName")?.value || "").trim(),
       stagesCount: Number($("inpStagesCount")?.value || 3),
       hasFinal: $("inpHasFinal")?.value || "yes",
@@ -472,21 +491,18 @@
   }
   function applyCreateState(state){
     if(!state) return;
-    if($("inpType")) $("inpType").value = state.type || "season";
-    if($("inpYear")) $("inpYear").value = state.year || "";
-    if($("inpName")) $("inpName").value = state.name || "";
-    if($("inpStagesCount")) $("inpStagesCount").value = String(state.stagesCount || 3);
-    if($("inpHasFinal")) $("inpHasFinal").value = (state.hasFinal || "yes");
-
-    syncCreateUI(); // rebuild blocks first
+    $("inpType").value = state.type || "season";
+    $("inpYear").value = state.year || "";
+    $("inpName").value = state.name || "";
+    $("inpStagesCount").value = String(state.stagesCount || 3);
+    $("inpHasFinal").value = (state.hasFinal || "yes");
+    syncCreateUI();
     const wrap = $("eventWindowsWrap");
     if(wrap) fillEventsInto(wrap, state.events || []);
   }
 
   function installDraftAutosave(){
-    const saveNow = ()=>{
-      setDraft(collectCreateState());
-    };
+    const saveNow = ()=> setDraft(collectCreateState());
 
     ["inpType","inpYear","inpName","inpStagesCount","inpHasFinal"].forEach(id=>{
       const el = $(id);
@@ -495,7 +511,6 @@
       el.addEventListener("input", saveNow);
     });
 
-    // also dates inside blocks
     const wrap = $("eventWindowsWrap");
     const hookDates = ()=>{
       wrap.querySelectorAll("input[type=date]").forEach(inp=>{
@@ -505,17 +520,8 @@
     };
     hookDates();
 
-    // when blocks rebuilt, hook again
-    const _origSync = syncCreateUI;
-    window.__syncCreateUI = ()=>{
-      _origSync();
-      hookDates();
-      saveNow();
-    };
+    window.__rehookDates = hookDates;
   }
-
-  // ---------- main ----------
-  let auth=null, db=null;
 
   function compIdFrom(type, year, name){
     if(type==="season") return `season-${year}`;
@@ -535,76 +541,59 @@
     const wrap = $("eventWindowsWrap");
     const stagesCount = Number($("inpStagesCount")?.value || 3);
     const hasFinal = $("inpHasFinal")?.value || "yes";
-
     buildEventBlocksInto(wrap, {type, stagesCount, hasFinal});
+
+    if(window.__rehookDates) window.__rehookDates();
+    setDraft(collectCreateState());
   }
 
-  async function init(){
+  let auth=null, db=null;
+
+  async function loadCompetitionsToSelect(){
+    const sel = $("selCompetition");
+    const editor = $("editWindowsWrap");
+    sel.innerHTML = `<option value="">Завантаження…</option>`;
+    editor.innerHTML = "";
+
+    let activeId = "";
     try{
-      await waitForFirebase();
-      auth = window.scAuth;
-      db   = window.scDb;
-    }catch(e){
-      setStatus("Firebase не запустився ❌");
-      setDebug(e.message || String(e));
-      show(adminLogin);
+      const s = await db.collection("settings").doc("app").get();
+      if(s.exists) activeId = (s.data()||{}).activeCompetitionId || "";
+    }catch(_){}
+
+    const snap = await db.collection("competitions").get();
+    const items = snap.docs.map(doc=>{
+      const d = doc.data() || {};
+      return {
+        id: doc.id,
+        year: d.year || 0,
+        type: d.type || "",
+        name: d.name || doc.id
+      };
+    });
+
+    items.sort((a,b)=>{
+      if(b.year !== a.year) return b.year - a.year;
+      return (a.name||"").localeCompare(b.name||"","uk");
+    });
+
+    if(!items.length){
+      sel.innerHTML = `<option value="">Нема змагань. Створи спочатку.</option>`;
       return;
     }
 
-    // login
-    $("btnAdminLogin").onclick = async ()=>{
-      const email = ($("admEmail").value || "").trim();
-      const pass  = ($("admPass").value || "").trim();
-      const msg   = $("adminLoginMsg");
-      if(!email || !pass){ msg.textContent="Введи email і пароль."; return; }
-      msg.textContent="Вхід…";
-      try{
-        await auth.signInWithEmailAndPassword(email, pass);
-      }catch(e){
-        msg.textContent = e?.message || "Помилка входу";
-      }
-    };
+    sel.innerHTML = items.map(it=>{
+      const isActive = it.id === activeId;
+      const label = `${isActive ? "✅ " : ""}${it.id} — ${it.name}`;
+      return `<option value="${esc(it.id)}" ${isActive ? "selected" : ""}>${esc(label)}</option>`;
+    }).join("");
 
-    $("btnAdminLogout").onclick = async ()=>{
-      try{ await auth.signOut(); }catch{}
-    };
+    await loadSelectedCompetitionIntoEditor();
+  }
 
-    // modules
-    $("btnOpenCreate").onclick = ()=> openModule("create");
-    $("btnOpenEdit").onclick = async ()=>{
-      openModule("edit");
-      await loadCompetitionsToSelect();
-    };
-
-    // build create UI
-    $("inpType").onchange = ()=> (window.__syncCreateUI ? window.__syncCreateUI() : syncCreateUI());
-    $("inpStagesCount").onchange = ()=> (window.__syncCreateUI ? window.__syncCreateUI() : syncCreateUI());
-    $("inpHasFinal").onchange = ()=> (window.__syncCreateUI ? window.__syncCreateUI() : syncCreateUI());
-
-    syncCreateUI();
-
-    // restore draft
-    const draft = getDraft();
-    if(draft) applyCreateState(draft);
-
-    installDraftAutosave();
-
-    $("btnResetDraft").onclick = ()=>{
-      clearDraft();
-      $("inpYear").value = "";
-      $("inpName").value = "";
-      $("inpType").value = "season";
-      $("inpStagesCount").value = "3";
-      $("inpHasFinal").value = "yes";
-      syncCreateUI();
-      $("createMsg").innerHTML = `<span class="ok">✅ Чернетку скинуто</span>`;
-    };
-
-    // save competition
-    $("btnSaveCompetition").onclick = async ()=>{
-      const msg = $("createMsg");
-      msg.className="muted";
-      msg.textContent="Збереження…";
-
-      try{
-      
+  async function loadSelectedCompetitionIntoEditor(){
+    const sel = $("selCompetition");
+    const editor = $("editWindowsWrap");
+    const compId = sel.value;
+    editor.innerHTML = "";
+    if(!compId
