--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Реєстрація на етап — STOLAR CARP</title>
+  <h1 class="title-gradient"><span>РЕЄСТРАЦІЯ ЗМАГАНЬ STOLAR CARP</span></h1>
 
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link rel="apple-touch-icon" href="assets/favicon.png">
@@ -145,15 +145,15 @@
         <span class="register-hero__kicker-tag">SC</span>
         SEASON 2026 · ENTRY
       </div>
-      <h1 class="title-gradient"><span>РЕЄСТРАЦІЯ НА ЕТАП</span></h1>
-      <p>Виберіть відкритий етап, налаштуйте харчування — і подайте заявку. Дані команди беруться з вашого акаунта STOLAR CARP.</p>
+      <h1 class="title-gradient"><span>РЕЄСТРАЦІЯ STOLAR CARP</span></h1>
+      <p>Виберіть відкриті змагання, налаштуйте харчування — і подайте заявку.</p>
       <div class="register-hero__divider"></div>
     </div>
 
     <div class="register-layout">
 
       <div class="card register-form-card">
-        <h2>Форма реєстрації на етап</h2>
+        <h2>ФОРМА РЕЄСТРАЦІЇ</h2>
         <p class="form__hint">Поля з позначкою <span style="color:var(--accent);">*</span> є обовʼязковими.</p>
 
         <div id="profileSummary" class="profile-summary">Профіль: завантаження...</div>
