--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <h1 class="title-gradient"><span>РЕЄСТРАЦІЯ ЗМАГАНЬ STOLAR CARP</span></h1>
+  <title>Реєстрація — STOLAR CARP</title>
 
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link rel="apple-touch-icon" href="assets/favicon.png">
@@ -15,6 +15,7 @@
   <style>
     body.register-page{background:var(--bg);}
     .section--narrow{max-width:1100px;margin:0 auto;}
+
     .register-hero{
       margin-top:14px;margin-bottom:22px;padding:18px 16px 16px;border-radius:16px;
       background:linear-gradient(145deg,#14141d,#08080d);border:1px solid #262636;
@@ -33,7 +34,7 @@
     }
     .register-hero h1{
       margin:0 0 8px;font-size:clamp(22px,3.4vw,28px);
-      font-weight:800;letter-spacing:.06em;text-transform:uppercase;
+      font-weight:900;letter-spacing:.06em;text-transform:uppercase;
     }
     .register-hero .title-gradient{
       background:linear-gradient(90deg,#f6c34c 0%,#cc6a2b 40%,#7a0f2b 100%);
@@ -45,36 +46,29 @@
       background:linear-gradient(90deg,#f6c34c 0%,#cc6a2b 50%,#7a0f2b 100%);
       box-shadow:0 0 10px rgba(246,195,76,.5);
     }
+
     .register-layout{
       display:grid;grid-template-columns:minmax(0,2fr) minmax(0,1.1fr);
       gap:18px;align-items:flex-start;
     }
     @media (max-width:860px){.register-layout{grid-template-columns:1fr;}}
 
-    .register-form-card h2{margin:0 0 6px;font-size:1.05rem;text-transform:uppercase;letter-spacing:.08em;}
+    .register-form-card h2{margin:0 0 6px;font-size:1.05rem;text-transform:uppercase;letter-spacing:.10em;}
     .form__hint{font-size:.8rem;color:var(--muted);}
+
+    .field{display:grid;gap:6px;margin-bottom:12px;}
+    .field label{font-size:.9rem;font-weight:600;}
+    #foodQtyField.field--disabled{opacity:.55;}
 
     .register-page input[type="number"]{
       background:#0f0f14;border:1px solid #2a2a39;color:#fff;
-      padding:10px 14px;border-radius:10px;font-size:.96rem;
+      padding:10px 14px;border-radius:12px;font-size:.96rem;
     }
     .register-page input::placeholder{color:#6b7280;}
     .register-page input:focus{
       outline:none;border-color:var(--accent);
-      box-shadow:0 0 6px rgba(246,195,76,0.5);
+      box-shadow:0 0 8px rgba(246,195,76,0.35);
     }
-
-    .field{display:grid;gap:6px;margin-bottom:12px;}
-    .field label{font-size:.9rem;font-weight:500;}
-    #foodQtyField.field--disabled{opacity:.55;}
-
-    .event-options{display:flex;flex-direction:column;gap:6px;padding-top:2px;}
-    .event-item{
-      display:flex;align-items:center;gap:8px;padding:7px 10px;border-radius:10px;
-      background:#05060c;border:1px solid #262636;cursor:pointer;font-size:.9rem;
-    }
-    .event-item:hover{border-color:var(--accent);}
-    .event-item input[type="radio"]{width:18px;height:18px;accent-color:#22c55e;flex-shrink:0;}
 
     .radio-row{display:flex;flex-wrap:wrap;gap:16px;}
     .radio-row label{display:inline-flex;align-items:center;gap:6px;cursor:pointer;font-size:.9rem;}
@@ -87,30 +81,147 @@
     }
     .spinner--on{display:inline-block;animation:spin .9s linear infinite;}
     @keyframes spin{to{transform:rotate(360deg)}}
-
-    .form-msg{margin-top:6px;font-weight:600;font-size:.9rem;}
+    .form-msg{margin-top:6px;font-weight:800;font-size:.9rem;}
     .form-msg.ok{color:#43d18a;}
     .form-msg.err{color:#ff6c6c;}
 
     .card--payment{background:#05060c;border:1px solid #262636;box-shadow:var(--shadow);}
     .card-payment-title{
-      font-weight:600;margin-bottom:6px;display:flex;align-items:center;gap:8px;
+      font-weight:800;margin-bottom:6px;display:flex;align-items:center;gap:8px;
       text-transform:uppercase;font-size:.84rem;letter-spacing:.12em;color:#e5e7eb;
     }
     .card-payment-title span{
       width:20px;height:20px;border-radius:50%;
       background:linear-gradient(135deg,var(--accent),var(--accent-2));
       display:inline-flex;align-items:center;justify-content:center;
-      font-size:.9rem;color:#000;font-weight:800;
+      font-size:.9rem;color:#000;font-weight:900;
     }
     .card-number{
-      font-weight:600;letter-spacing:.16em;padding:8px 10px;border-radius:10px;
+      font-weight:800;letter-spacing:.16em;padding:8px 10px;border-radius:12px;
       background:#020308;border:1px solid #33384a;display:inline-block;
       margin:4px 0;font-size:.9rem;
     }
     .card-note{font-size:.8rem;color:var(--muted);margin-top:6px;}
-    .profile-summary{font-size:.85rem;color:var(--muted);margin-bottom:10px;}
+    .profile-summary{font-size:.88rem;color:var(--muted);margin-bottom:10px;}
     .profile-summary b{color:#e5e7eb;}
+
+    /* ===== Premium stage picker (вбудовано тут, щоб ти не шукав де ставити) ===== */
+    .event-options{ display:flex; flex-direction:column; gap:10px; padding-top:2px; }
+
+    .event-item{
+      position:relative;
+      display:flex; align-items:flex-start; gap:10px;
+      padding:12px 12px;
+      border-radius:14px;
+      background:linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02));
+      border:1px solid rgba(148,163,184,.22);
+      box-shadow:0 10px 26px rgba(0,0,0,.35);
+      transition:transform .12s ease, border-color .2s ease, box-shadow .2s ease;
+      cursor:pointer;
+    }
+    .event-item:hover{
+      transform:translateY(-1px);
+      border-color:rgba(246,195,76,.55);
+      box-shadow:0 14px 34px rgba(0,0,0,.45);
+    }
+    .event-item input[type="radio"]{
+      width:18px;height:18px;
+      accent-color:var(--accent);
+      margin-top:2px;
+      flex-shrink:0;
+    }
+    .event-body{ flex:1; min-width:0; }
+    .event-title{
+      display:flex;
+      align-items:flex-start;
+      justify-content:space-between;
+      gap:10px;
+      font-weight:900;
+      letter-spacing:.02em;
+    }
+    .event-title .text{
+      overflow:hidden;
+      text-overflow:ellipsis;
+      white-space:nowrap;
+    }
+    .event-meta{
+      margin-top:4px;
+      font-size:12px;
+      color:var(--muted);
+      line-height:1.35;
+    }
+
+    .event-badges{
+      display:flex;
+      gap:6px;
+      flex-wrap:wrap;
+      justify-content:flex-end;
+      align-items:flex-start;
+      flex-shrink:0;
+    }
+    .pill-b{
+      font-size:11px;
+      padding:5px 10px;
+      border-radius:999px;
+      border:1px solid rgba(148,163,184,.25);
+      background:rgba(2,6,23,.55);
+      color:#e5e7eb;
+      white-space:nowrap;
+      font-weight:800;
+      letter-spacing:.03em;
+      text-transform:uppercase;
+    }
+
+    /* статус */
+    .pill-b--open{
+      background:linear-gradient(135deg,#22c55e,#16a34a);
+      border-color:transparent;
+      color:#04110a;
+      font-weight:900;
+    }
+    .pill-b--closed{
+      background:rgba(239,68,68,.15);
+      border-color:rgba(239,68,68,.35);
+      color:#ffb4b4;
+    }
+
+    /* типи (твої вимоги по кольорах) */
+    .pill-b--stage{
+      background:rgba(56,189,248,.14);
+      border-color:rgba(56,189,248,.35);
+      color:#bfefff;
+    }
+    .pill-b--final{
+      background:linear-gradient(135deg,#f6c34c,#cc6a2b,#7a0f2b);
+      border-color:transparent;
+      color:#120a00;
+      font-weight:900;
+    }
+    .pill-b--oneoff{
+      background:rgba(168,85,247,.14);
+      border-color:rgba(168,85,247,.35);
+      color:#f2d7ff;
+    }
+    .pill-b--stalker{
+      background:linear-gradient(135deg,#ffcc00,#d72638);
+      border-color:transparent;
+      color:#120a00;
+      font-weight:900;
+    }
+
+    /* активний вибір */
+    .event-item.is-active{
+      border-color:rgba(246,195,76,.75);
+      box-shadow:0 18px 44px rgba(0,0,0,.55);
+    }
+
+    /* закриті */
+    .event-item.is-closed{
+      opacity:.58;
+      filter:saturate(.85);
+      cursor:not-allowed;
+    }
+    .event-item.is-closed:hover{ transform:none; box-shadow:0 10px 26px rgba(0,0,0,.35); }
   </style>
 </head>
 
@@ -125,7 +236,7 @@
     <nav class="nav" id="nav">
       <a href="/index.html" class="nav__link">Головна</a>
       <a href="/rules.html" class="nav__link">Регламент</a>
-      <a href="/register.html" class="nav__link">Реєстрація</a>
+      <a href="/register.html" class="nav__link nav__link--active">Реєстрація</a>
       <a href="/live.html" class="nav__link">Live</a>
       <a href="/rating.html" class="nav__link">Рейтинг</a>
       <a href="/lakes.html" class="nav__link">Водойми</a>
@@ -133,7 +244,7 @@
       <a href="/events/index.html" class="nav__link">Архів</a>
       <a href="/auth.html" class="nav__link">Акаунт</a>
     </nav>
-    <button class="burger" id="burger"><span></span><span></span><span></span></button>
+    <button class="burger" id="burger" aria-label="Меню"><span></span><span></span><span></span></button>
   </div>
 </header>
 
@@ -143,10 +254,10 @@
     <div class="register-hero">
       <div class="register-hero__kicker">
         <span class="register-hero__kicker-tag">SC</span>
-        SEASON 2026 · ENTRY
+        ENTRY · STOLAR CARP
       </div>
-      <h1 class="title-gradient"><span>РЕЄСТРАЦІЯ STOLAR CARP</span></h1>
-      <p>Виберіть відкриті змагання, налаштуйте харчування — і подайте заявку.</p>
+      <h1 class="title-gradient"><span>РЕЄСТРАЦІЯ ЗМАГАНЬ STOLAR CARP</span></h1>
+      <p>Виберіть відкрите змагання/етап, налаштуйте харчування — і подайте заявку. Дані команди беруться з вашого акаунта.</p>
       <div class="register-hero__divider"></div>
     </div>
 
@@ -163,9 +274,9 @@
                  style="position:absolute;left:-9999px;top:-9999px;height:0;width:0;opacity:0;"/>
 
           <div class="field">
-            <label>Оберіть етап турніру <span style="color:var(--accent);">*</span></label>
+            <label>Оберіть змагання / етап <span style="color:var(--accent);">*</span></label>
             <div id="eventOptions" class="event-options">
-              <p class="form__hint">Завантаження актуальних етапів...</p>
+              <p class="form__hint">Завантаження актуальних змагань...</p>
             </div>
           </div>
 
@@ -185,10 +296,10 @@
           </div>
 
           <div class="field">
-            <label style="display:flex;align-items:center;gap:8px;cursor:pointer;">
-              <input type="checkbox" id="rules" required style="transform:scale(1.3);accent-color:#f6c34c;">
+            <label style="display:flex;align-items:center;gap:10px;cursor:pointer;">
+              <input type="checkbox" id="rules" required style="transform:scale(1.25);accent-color:var(--accent);">
               <span>Підтверджую, що ознайомлений із
-                <a href="rules.html" target="_blank" style="color:#f6c34c;text-decoration:underline;">регламентом турніру</a>
+                <a href="rules.html" target="_blank" style="color:var(--accent);text-decoration:underline;">регламентом турніру</a>
               </span>
             </label>
           </div>
@@ -201,7 +312,7 @@
           <div id="msg" class="form-msg"></div>
 
           <p class="form__hint" style="margin-top:6px;">
-            Після подачі заявки організатор бачить її в адмінці DK Prime і підтверджує участь після оплати внеску.
+            Після подачі заявки організатор бачить її в адмінці та підтверджує участь після оплати внеску.
           </p>
         </form>
       </div>
